Added ExternalizedMapping operator to generalize exposed workflow properties.

--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -80,17 +80,23 @@
     <Compile Include="Expressions\EmptyExpression.cs" />
     <Compile Include="Expressions\ExpressionBuilderArgumentDescriptor.cs" />
     <Compile Include="Expressions\ExtendedPropertyDescriptor.cs" />
+    <Compile Include="Expressions\ExternalizedMapping.cs" />
+    <Compile Include="Expressions\ExternalizedMappingBuilder.cs" />
+    <Compile Include="Expressions\ExternalizedMappingCollection.cs" />
+    <Compile Include="Expressions\ExternalizedMappingNameConverter.cs" />
     <Compile Include="Expressions\FormatBuilder.cs" />
     <Compile Include="Expressions\GetValueOrDefault.cs" />
     <Compile Include="Expressions\GroupContext.cs" />
     <Compile Include="Expressions\GroupWorkflowBuilder.cs" />
     <Compile Include="Expressions\ExternalizedPropertyDescriptor.cs" />
     <Compile Include="Expressions\IBuildContext.cs" />
+    <Compile Include="Expressions\IExternalizedMappingBuilder.cs" />
     <Compile Include="Expressions\IGroupWorkflowBuilder.cs" />
     <Compile Include="Expressions\IncludeContext.cs" />
     <Compile Include="Expressions\IncludeWorkflowBuilder.cs" />
     <Compile Include="Expressions\IndexBuilder.cs" />
     <Compile Include="Expressions\IWorkflowExpressionBuilder.cs" />
+    <Compile Include="Expressions\MappingNameConverter.cs" />
     <Compile Include="Expressions\MulticastBranchExpression.cs" />
     <Compile Include="Expressions\Properties\ByteProperty.cs" />
     <Compile Include="Expressions\PropertyMappingNameConverter.cs" />
