Added support for simple contour hierarchy enumeration.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Drawing\FillPolygon.cs" />
     <Compile Include="Drawing\PolyLine.cs" />
     <Compile Include="Drawing\Rectangle.cs" />
+    <Compile Include="EnumerateContours.cs" />
     <Compile Include="Extrinsics.cs" />
     <Compile Include="HaarCascade.cs" />
     <Compile Include="HsvScalarConverter.cs" />
