Added support for easily mapping or externalizing all target properties.

--- a/Bonsai.Design/Bonsai.Design.csproj
+++ b/Bonsai.Design/Bonsai.Design.csproj
@@ -80,6 +80,7 @@
     <Compile Include="FolderBrowserDialog.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MappingCollectionEditor.cs" />
     <Compile Include="MultiMemberSelectorEditor.cs" />
     <Compile Include="IMemberSelectorEditorDialog.cs" />
     <Compile Include="MultiMemberSelectorEditorDialog.cs">
