Added operator for converting fixed size array types into Seq types.

--- a/Bonsai.Dsp/Bonsai.Dsp.csproj
+++ b/Bonsai.Dsp/Bonsai.Dsp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ArrayExtrema.cs" />
     <Compile Include="BitBuffer.cs" />
     <Compile Include="Butterworth.cs" />
+    <Compile Include="ConvertToSeq.cs" />
     <Compile Include="IncrementalMean.cs" />
     <Compile Include="KernelLengthConverter.cs" />
     <Compile Include="Pow.cs" />
