Added LineChart operator for drawing multiple line series data.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Drawing\CanvasElement.cs" />
     <Compile Include="Drawing\Line.cs" />
     <Compile Include="Drawing\FillPolygon.cs" />
+    <Compile Include="Drawing\LineChart.cs" />
     <Compile Include="Drawing\PolyLine.cs" />
     <Compile Include="Drawing\Rectangle.cs" />
     <Compile Include="EnumerateContours.cs" />
