Added support for finding chessboard corners for camera calibration.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Drawing\Rectangle.cs" />
     <Compile Include="EnumerateContours.cs" />
     <Compile Include="Extrinsics.cs" />
+    <Compile Include="FindChessboardCorners.cs" />
     <Compile Include="HaarCascade.cs" />
     <Compile Include="HsvScalarConverter.cs" />
     <Compile Include="Intrinsics.cs" />
