--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -106,6 +106,7 @@
     <Compile Include="EnumerateContours.cs" />
     <Compile Include="Extrinsics.cs" />
     <Compile Include="FindChessboardCorners.cs" />
+    <Compile Include="FindCornerSubPix.cs" />
     <Compile Include="HaarCascade.cs" />
     <Compile Include="HsvScalarConverter.cs" />
     <Compile Include="Intrinsics.cs" />
