--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -89,6 +89,7 @@
     <Compile Include="MaterialNameConverter.cs" />
     <Compile Include="MeshResources.cs" />
     <Compile Include="RefreshRate.cs" />
+    <Compile Include="RenderCubemap.cs" />
     <Compile Include="RenderCubemapTarget.cs" />
     <Compile Include="RenderTexture.cs" />
     <Compile Include="ExtrinsicsModelView.cs" />
