--- a/Bonsai.Shaders/Bonsai.Shaders.csproj
+++ b/Bonsai.Shaders/Bonsai.Shaders.csproj
@@ -68,6 +68,7 @@
     <Compile Include="BindTexture.cs" />
     <Compile Include="Bounds.cs" />
     <Compile Include="BufferBinding.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="ComputeProgram.cs" />
     <Compile Include="ComputeProgramNameConverter.cs" />
     <Compile Include="Configuration\Cubemap.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Configuration\ScissorState.cs" />
     <Compile Include="Configuration\ViewportEffectConfiguration.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="CreateCubemapCamera.cs" />
     <Compile Include="CreateMatrix2.cs" />
     <Compile Include="CreateMatrix3.cs" />
     <Compile Include="CreateMatrix4.cs" />
