Added support for calibrating camera intrinsics from chessboard pattern views.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -71,6 +71,8 @@
     <Compile Include="BgraScalarConverter.cs" />
     <Compile Include="BinaryRegionAnalysis.cs" />
     <Compile Include="BinaryRegionExtremes.cs" />
+    <Compile Include="CalibrateCameraChessboard.cs" />
+    <Compile Include="CameraCalibration.cs" />
     <Compile Include="CameraCapture.cs" />
     <Compile Include="Canny.cs" />
     <Compile Include="CapturePropertyAssignment.cs" />
