--- a/Bonsai.Osc/Bonsai.Osc.csproj
+++ b/Bonsai.Osc/Bonsai.Osc.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Net\UdpConfiguration.cs" />
     <Compile Include="Net\UdpTransport.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="Parse.cs" />
     <Compile Include="ReceiveMessage.cs" />
     <Compile Include="MessageBuilder.cs" />
     <Compile Include="MessageParser.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="TimeTag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeTag.cs" />
+    <Compile Include="TypeTagConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj">
