Added support for serializing list types.

--- a/Bonsai.System.Design/Bonsai.System.Design.csproj
+++ b/Bonsai.System.Design/Bonsai.System.Design.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataMemberSelectorEditor.cs" />
     <Compile Include="SerialPortConfigurationControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
