Added Slice operator for subdividing an array into multiple sub-arrays.

--- a/Bonsai.Dsp/Bonsai.Dsp.csproj
+++ b/Bonsai.Dsp/Bonsai.Dsp.csproj
@@ -133,6 +133,7 @@
     <Compile Include="DetectSpikes.cs" />
     <Compile Include="Shift.cs" />
     <Compile Include="Skip.cs" />
+    <Compile Include="Slice.cs" />
     <Compile Include="SpikeWaveform.cs" />
     <Compile Include="SpikeWaveformCollection.cs" />
     <Compile Include="SpikeWaveformRefinement.cs" />
