Added Path operator for drawing a path shape from an array of vertices.

--- a/Bonsai.Vision/Bonsai.Vision.csproj
+++ b/Bonsai.Vision/Bonsai.Vision.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Drawing\Line.cs" />
     <Compile Include="Drawing\FillPolygon.cs" />
     <Compile Include="Drawing\LineChart.cs" />
+    <Compile Include="Drawing\Path.cs" />
     <Compile Include="Drawing\PolyLine.cs" />
     <Compile Include="Drawing\Rectangle.cs" />
     <Compile Include="EnumerateContours.cs" />
