--- a/Bonsai.Scripting/Bonsai.Scripting.csproj
+++ b/Bonsai.Scripting/Bonsai.Scripting.csproj
@@ -100,6 +100,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExpressionScriptEditor.cs" />
+    <Compile Include="ExpressionScriptEditorDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExpressionScriptEditorDialog.Designer.cs">
+      <DependentUpon>ExpressionScriptEditorDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="ExpressionSink.cs" />
     <Compile Include="ExpressionCondition.cs" />
     <Compile Include="IScriptingElement.cs" />
@@ -138,6 +145,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ExpressionScriptEditorDialog.resx">
+      <DependentUpon>ExpressionScriptEditorDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="PythonScriptEditorDialog.resx">
       <DependentUpon>PythonScriptEditorDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
