--- a/Bonsai.Design.Visualizers/Bonsai.Design.Visualizers.csproj
+++ b/Bonsai.Design.Visualizers/Bonsai.Design.Visualizers.csproj
@@ -73,6 +73,7 @@
     <Compile Include="GraphControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="GraphHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
     <Compile Include="StateTimeVisualizer.cs" />
