--- a/Bonsai.Design.Visualizers/Bonsai.Design.Visualizers.csproj
+++ b/Bonsai.Design.Visualizers/Bonsai.Design.Visualizers.csproj
@@ -76,6 +76,8 @@
     <Compile Include="GraphHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
+    <Compile Include="RollingGraphBuilder.cs" />
+    <Compile Include="RollingGraphVisualizer.cs" />
     <Compile Include="StateTimeVisualizer.cs" />
     <Compile Include="RollingGraph.cs">
       <SubType>UserControl</SubType>
