--- a/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
+++ b/Bonsai.Vision.Design/Bonsai.Vision.Design.csproj
@@ -89,6 +89,10 @@
     <Compile Include="BinaryRegionExtremesMashupVisualizer.cs" />
     <Compile Include="ContourConvexityMashupVisualizer.cs" />
     <Compile Include="CircleVisualizer.cs" />
+    <Compile Include="ImageEllipseRoiPicker.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="IplImageEllipseRoiEditor.cs" />
     <Compile Include="IplImageInputLabeledRoiEditor.cs" />
     <Compile Include="PolygonMashupVisualizer.cs" />
     <Compile Include="RectMashupVisualizer.cs" />
