Updated XML serialization to remove the need for assembly qualified type names.

--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -175,6 +175,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ProxyTypeAttribute.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="Reactive\Accumulate.cs" />
     <Compile Include="Reactive\Average.cs" />
