Refactored XML serialization to move all namespace declarations to root element.

--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -187,6 +187,7 @@
     <Compile Include="WorkflowElementDescriptor.cs" />
     <Compile Include="WorkflowRuntimeExceptionCache.cs" />
     <Compile Include="UpgradeHelper.cs" />
+    <Compile Include="XmlnsIndentedWriter.cs" />
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
