--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppResult.cs" />
+    <Compile Include="EditorFlags.cs" />
     <Compile Include="ScriptExtensions.cs" />
     <Compile Include="TempDirectory.cs" />
     <Compile Include="GalleryPackagePathResolver.cs" />
