--- a/Bonsai/App.config
+++ b/Bonsai/App.config
@@ -3,4 +3,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
   </startup>
+  <runtime>
+    <AppContextSwitchOverrides value="Switch.System.Net.DontEnableSystemDefaultTlsVersions=false"/>
+  </runtime>
 </configuration>
