--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
     <Compile Include="WorkflowElementCategoryAttribute.cs" />
     <Compile Include="WorkflowIconAttribute.cs" />
+    <Compile Include="WorkflowNamespaceIconAttribute.cs" />
     <Compile Include="WorkflowRuntimeException.cs" />
     <Compile Include="WorkflowException.cs" />
     <Compile Include="Reactive\CombineTimestamp.cs" />
