--- a/Bonsai.Arduino.Design/Bonsai.Arduino.Design.nuspec
+++ b/Bonsai.Arduino.Design/Bonsai.Arduino.Design.nuspec
@@ -11,12 +11,11 @@
     <iconUrl>https://bitbucket.org/horizongir/bonsai/raw/7aacc64dc4647e57362ab310238591dc197fef0d/Resources/Bonsai.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Public release containing editors for Arduino configuration in Bonsai.</releaseNotes>
-    <copyright>Gonçalo Lopes © 2017</copyright>
+    <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Arduino Design</tags>
     <dependencies>
-      <dependency id="Bonsai.Arduino" version="2.3.0" />
-      <dependency id="Bonsai.Design" version="2.3.0" />
+      <dependency id="Bonsai.Arduino" version="2.4.0-preview" />
+      <dependency id="Bonsai.Design" version="2.4.0-preview" />
     </dependencies>
   </metadata>
 </package>
