--- a/Bonsai.Arduino/Bonsai.Arduino.nuspec
+++ b/Bonsai.Arduino/Bonsai.Arduino.nuspec
@@ -11,11 +11,10 @@
     <iconUrl>https://bitbucket.org/horizongir/bonsai/raw/7aacc64dc4647e57362ab310238591dc197fef0d/Resources/Bonsai.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Public release of Arduino communication infrastructure for Bonsai.</releaseNotes>
-    <copyright>Gonçalo Lopes © 2017</copyright>
+    <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Rx Reactive Extensions Arduino</tags>
     <dependencies>
-      <dependency id="Bonsai.System" version="2.3.0" />
+      <dependency id="Bonsai.System" version="2.4.0-preview" />
     </dependencies>
   </metadata>
 </package>
