--- a/Bonsai.Audio/Bonsai.Audio.nuspec
+++ b/Bonsai.Audio/Bonsai.Audio.nuspec
@@ -14,8 +14,8 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Rx Reactive Extensions Audio</tags>
     <dependencies>
-      <dependency id="Bonsai.Core" version="2.4.0" />
-      <dependency id="Bonsai.System" version="2.4.0" />
+      <dependency id="Bonsai.Core" version="2.4.0-preview" />
+      <dependency id="Bonsai.System" version="2.4.0-preview" />
     </dependencies>
   </metadata>
 </package>
