--- a/Bonsai.Vision.Design/Bonsai.Vision.Design.nuspec
+++ b/Bonsai.Vision.Design/Bonsai.Vision.Design.nuspec
@@ -14,8 +14,8 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Vision Visualizers</tags>
     <dependencies>
-      <dependency id="Bonsai.Vision" version="2.4.0" />
-      <dependency id="Bonsai.Design.Visualizers" version="2.4.0" />
+      <dependency id="Bonsai.Vision" version="2.4.0-preview" />
+      <dependency id="Bonsai.Design.Visualizers" version="2.4.0-preview" />
     </dependencies>
   </metadata>
 </package>
