--- a/Bonsai.Windows.Input/Bonsai.Windows.Input.nuspec
+++ b/Bonsai.Windows.Input/Bonsai.Windows.Input.nuspec
@@ -14,7 +14,7 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Windows Input</tags>
     <dependencies>
-      <dependency id="Bonsai.Core" version="2.4.0" />
+      <dependency id="Bonsai.Core" version="2.4.0-preview" />
     </dependencies>
   </metadata>
 </package>
