--- a/Bonsai.Editor/Bonsai.Editor.nuspec
+++ b/Bonsai.Editor/Bonsai.Editor.nuspec
@@ -14,7 +14,7 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Editor Rx Reactive Extensions Events Data Processing</tags>
     <dependencies>
-      <dependency id="Bonsai.Design" version="2.4.0-preview" />
+      <dependency id="Bonsai.Design" version="2.4.0" />
     </dependencies>
   </metadata>
 </package>
