--- a/Bonsai.Osc.Design/Bonsai.Osc.Design.nuspec
+++ b/Bonsai.Osc.Design/Bonsai.Osc.Design.nuspec
@@ -14,8 +14,8 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Osc Design</tags>
     <dependencies>
-      <dependency id="Bonsai.Osc" version="2.4.0-preview" />
-      <dependency id="Bonsai.Design" version="2.4.0-preview" />
+      <dependency id="Bonsai.Osc" version="2.4.0" />
+      <dependency id="Bonsai.Design" version="2.4.0" />
     </dependencies>
   </metadata>
 </package>
