--- a/Bonsai.System.Design/Bonsai.System.Design.nuspec
+++ b/Bonsai.System.Design/Bonsai.System.Design.nuspec
@@ -14,8 +14,8 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai IO Design</tags>
     <dependencies>
-      <dependency id="Bonsai.System" version="2.4.0-preview" />
-      <dependency id="Bonsai.Design" version="2.4.0-preview" />
+      <dependency id="Bonsai.System" version="2.4.0" />
+      <dependency id="Bonsai.Design" version="2.4.0" />
     </dependencies>
   </metadata>
 </package>
