--- a/Bonsai.System/Bonsai.System.nuspec
+++ b/Bonsai.System/Bonsai.System.nuspec
@@ -14,7 +14,7 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Rx Reactive Extensions IO Serial Port</tags>
     <dependencies>
-      <dependency id="Bonsai.Core" version="2.4.0-preview" />
+      <dependency id="Bonsai.Core" version="2.4.0" />
     </dependencies>
   </metadata>
 </package>
