--- a/Bonsai.Vision/Bonsai.Vision.nuspec
+++ b/Bonsai.Vision/Bonsai.Vision.nuspec
@@ -14,8 +14,8 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Rx Reactive Extensions Image Processing Computer Vision</tags>
     <dependencies>
-      <dependency id="Bonsai.Core" version="2.4.0-preview" />
-      <dependency id="Bonsai.Dsp" version="2.4.0-preview" />
+      <dependency id="Bonsai.Core" version="2.4.0" />
+      <dependency id="Bonsai.Dsp" version="2.4.0" />
     </dependencies>
   </metadata>
 </package>
