--- a/Bonsai/Bonsai.nuspec
+++ b/Bonsai/Bonsai.nuspec
@@ -14,7 +14,7 @@
     <copyright>Gonçalo Lopes © 2019</copyright>
     <tags>Bonsai Rx Reactive Extensions Events Data Processing</tags>
     <dependencies>
-      <dependency id="Bonsai.Editor" version="2.4.0-preview" />
+      <dependency id="Bonsai.Editor" version="2.4.0" />
     </dependencies>
   </metadata>
 </package>
