--- a/Bonsai.Shaders.Design/Bonsai.Shaders.Design.nuspec
+++ b/Bonsai.Shaders.Design/Bonsai.Shaders.Design.nuspec
@@ -15,6 +15,7 @@
     <tags>Bonsai Shaders Design Graphics OpenGL</tags>
     <dependencies>
       <dependency id="Bonsai.Design" version="2.4.0" />
+      <dependency id="Bonsai.System" version="2.4.0" />
       <dependency id="Bonsai.Shaders" version="0.19.0" />
     </dependencies>
   </metadata>
