Added explicit XmlTypeAttribute to avoid name clash in base class serialization.

--- a/Bonsai.System/Bonsai.System.csproj
+++ b/Bonsai.System/Bonsai.System.csproj
@@ -97,6 +97,7 @@
     <Compile Include="IO\TextWriter.cs" />
     <Compile Include="IO\Ports\SerialStringRead.cs" />
     <Compile Include="IO\Ports\SerialStringWrite.cs" />
+    <Compile Include="Resources\Constants.cs" />
     <Compile Include="Resources\LoadResources.cs" />
     <Compile Include="Resources\ResourceConfiguration.cs" />
     <Compile Include="Resources\ResourceConfigurationCollection.cs" />
