--- a/Bonsai.System.Design/Bonsai.System.Design.csproj
+++ b/Bonsai.System.Design/Bonsai.System.Design.csproj
@@ -56,6 +56,23 @@
     <Compile Include="IO\SerialPortConfigurationEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
+    <Compile Include="Resources\CollectionEditor.cs" />
+    <Compile Include="Resources\CollectionEditorControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Resources\CollectionEditorControl.Designer.cs">
+      <DependentUpon>CollectionEditorControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\CollectionEditorDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Resources\CollectionEditorDialog.Designer.cs">
+      <DependentUpon>CollectionEditorDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\ContextMenuButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Resources\ResourceCollectionEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Design\Bonsai.Design.csproj">
@@ -75,6 +92,15 @@
     <None Include="Bonsai.System.Design.nuspec">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\CollectionEditorControl.resx">
+      <DependentUpon>CollectionEditorControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\CollectionEditorDialog.resx">
+      <DependentUpon>CollectionEditorDialog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildProjectDirectory)\..\MSBuild\AssemblyInfo.targets" />
