--- a/Bonsai.Audio/Bonsai.Audio.csproj
+++ b/Bonsai.Audio/Bonsai.Audio.csproj
@@ -76,6 +76,7 @@
     <Compile Include="AudioReader.cs" />
     <Compile Include="AudioSource.cs" />
     <Compile Include="AudioWriter.cs" />
+    <Compile Include="BufferHelper.cs" />
     <Compile Include="CaptureDeviceNameConverter.cs" />
     <Compile Include="UpdateSource.cs" />
     <Compile Include="CreateSource.cs" />
@@ -83,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
     <Compile Include="RiffHeader.cs" />
+    <Compile Include="RiffReader.cs" />
     <Compile Include="RiffWriter.cs" />
     <Compile Include="UpdateListener.cs" />
   </ItemGroup>
