--- a/Bonsai.Editor/Bonsai.Editor.csproj
+++ b/Bonsai.Editor/Bonsai.Editor.csproj
@@ -235,6 +235,63 @@
     <None Include="Bonsai.ico" />
     <None Include="Resources\Bonsai.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ElementCategory\Combinator.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Condition.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Nested.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Property.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Sink.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Source.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Transform.svg" />
+    <EmbeddedResource Include="Resources\ElementCategory\Workflow.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ElementIcon\Audio.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\CSharp.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Daq.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Dsp.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Hid.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\IO.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Net.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Neuro.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Numerics.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Reactive.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Scripting.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Shaders.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Video.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Vision.svg" />
+    <EmbeddedResource Include="Resources\ElementIcon\Visualizer.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Expressions\AsyncSubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\BehaviorSubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\ConditionBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\CreateAsyncBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\CreateObservableBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\DeferBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\ExpressionBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\GroupWorkflowBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\IncludeWorkflowBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\InputMappingBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\MemberSelectorBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\MulticastSubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\NestedWorkflowBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\PublishBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\PublishSubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\ReplayBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\ReplaySubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\ResourceSubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\ScanBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\SelectManyBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\SinkBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\SkipWhileBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\SubscribeSubjectBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\TakeWhileBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\VisualizerBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\WindowBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\WorkflowInputBuilder.svg" />
+    <EmbeddedResource Include="Resources\Expressions\WorkflowOutputBuilder.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildProjectDirectory)\..\MSBuild\AssemblyInfo.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
