Added support for sending and receiving raw firmata sysex messages.

--- a/Bonsai.Arduino/Bonsai.Arduino.csproj
+++ b/Bonsai.Arduino/Bonsai.Arduino.csproj
@@ -71,6 +71,8 @@
     <Compile Include="ArduinoManager.cs" />
     <Compile Include="InputPullUp.cs" />
     <Compile Include="Properties\AssemblyInfo.Generated.cs" />
+    <Compile Include="ReceiveSysex.cs" />
+    <Compile Include="SendSysex.cs" />
     <Compile Include="ServoOutput.cs" />
     <Compile Include="DigitalInputReceivedEventArgs.cs" />
     <Compile Include="ObservableArduino.cs" />
