Added support for explicitly creating and configuring a firmata connection.

--- a/Bonsai.Arduino/Bonsai.Arduino.csproj
+++ b/Bonsai.Arduino/Bonsai.Arduino.csproj
@@ -64,6 +64,7 @@
     <Compile Include="AnalogInput.cs" />
     <Compile Include="ArduinoConfiguration.cs" />
     <Compile Include="ArduinoConfigurationCollection.cs" />
+    <Compile Include="CreateArduino.cs" />
     <Compile Include="DigitalInput.cs" />
     <Compile Include="DigitalOutput.cs" />
     <Compile Include="AnalogOutput.cs" />
