Added support for explicitly creating and configuring a system serial port.

--- a/Bonsai.System/Bonsai.System.csproj
+++ b/Bonsai.System/Bonsai.System.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\Ports\CreateSerialPort.cs" />
     <Compile Include="IO\ReadLine.cs" />
     <Compile Include="IO\WriteLine.cs" />
     <Compile Include="IO\EnumerateFileSystemEntries.cs" />
