Fixed #610. Added parse pattern editor to include token type documentation.

--- a/Bonsai.Design/Bonsai.Design.csproj
+++ b/Bonsai.Design/Bonsai.Design.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ControlObservable.cs" />
     <Compile Include="ControlScheduler.cs" />
     <Compile Include="EnumerableMemberSelectorEditor.cs" />
+    <Compile Include="ParsePatternEditor.cs" />
     <Compile Include="TypeMappingEditor.cs" />
     <Compile Include="TypeMappingEditorDialog.cs">
       <SubType>Form</SubType>
