--- a/Bonsai.StarterPack/Bonsai.StarterPack.nuspec
+++ b/Bonsai.StarterPack/Bonsai.StarterPack.nuspec
@@ -6,9 +6,9 @@
     <title>Bonsai - Starter Pack</title>
     <authors>Gonçalo Lopes</authors>
     <owners>Gonçalo Lopes</owners>
-    <licenseUrl>https://bitbucket.org/horizongir/bonsai/raw/0391fb050a80c94f8ff45c861678a41ae97ca257/LICENSE</licenseUrl>
-    <projectUrl>https://bitbucket.org/horizongir/bonsai</projectUrl>
-    <iconUrl>https://bitbucket.org/horizongir/bonsai/raw/7aacc64dc4647e57362ab310238591dc197fef0d/Resources/Bonsai.png</iconUrl>
+    <licenseUrl>https://bonsai-rx.org/license</licenseUrl>
+    <projectUrl>https://bonsai-rx.org</projectUrl>
+    <iconUrl>https://bonsai-rx.org/assets/images/bonsai.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>The Bonsai Starter Pack includes everything you need to build your own data processing workflows.</description>
     <copyright>Gonçalo Lopes © 2019</copyright>
