Added unit tests for externalized property descriptor access and assignment.

--- a/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
+++ b/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="CombinatorBuilderTests.cs" />
     <Compile Include="ExpressionBuilderArgumentTests.cs" />
     <Compile Include="ExpressionHelperTests.cs" />
+    <Compile Include="ExternalizedPropertyDescriptorTests.cs" />
     <Compile Include="TypeMappingTests.cs" />
     <Compile Include="InspectBuilderTests.cs" />
     <Compile Include="OverloadedCombinatorBuilderTests.cs" />
