Fixed #649. Allow lazy assignment of included workflow properties.

--- a/Bonsai.Core/Bonsai.Core.csproj
+++ b/Bonsai.Core/Bonsai.Core.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Expressions\IGroupWorkflowBuilder.cs" />
     <Compile Include="Expressions\IncludeContext.cs" />
     <Compile Include="Expressions\IncludeWorkflowBuilder.cs" />
+    <Compile Include="Expressions\IncludeWorkflowXmlTypeDescriptor.cs" />
     <Compile Include="Expressions\IndexBuilder.cs" />
     <Compile Include="Expressions\ISerializableElement.cs" />
     <Compile Include="Expressions\IWorkflowExpressionBuilder.cs" />
