Added unit tests for complex edge cases of include workflow property assignment.

--- a/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
+++ b/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="ExpressionBuilderArgumentTests.cs" />
     <Compile Include="ExpressionHelperTests.cs" />
     <Compile Include="ExternalizedPropertyDescriptorTests.cs" />
+    <Compile Include="IncludeWorkflowTests.cs" />
     <Compile Include="TypeMappingTests.cs" />
     <Compile Include="InspectBuilderTests.cs" />
     <Compile Include="OverloadedCombinatorBuilderTests.cs" />
@@ -83,6 +84,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="IncludeWorkflowOuter.bonsai" />
+    <EmbeddedResource Include="IncludeWorkflowInner.bonsai" />
+    <EmbeddedResource Include="IncludeWorkflow.bonsai" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
