--- a/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
+++ b/Bonsai.Core.Tests/Bonsai.Core.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GenericCombinatorBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TopologicalSortTests.cs" />
+    <Compile Include="TestTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Core\Bonsai.Core.csproj">
@@ -90,6 +91,8 @@
     <EmbeddedResource Include="IncludeWorkflow.bonsai" />
     <EmbeddedResource Include="IncludeWorkflowSelfOuter.bonsai" />
     <EmbeddedResource Include="IncludeWorkflowSelfInner.bonsai" />
+    <EmbeddedResource Include="IncludeWorkflowPolymorphicInner.bonsai" />
+    <EmbeddedResource Include="IncludeWorkflowPolymorphic.bonsai" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
